trybuild/fail/field_does_not_impl_arbitrary.stderr
error[E0277]: the trait bound `DoesNotImplArbitrary: Arbitrary` is not satisfied
 --> trybuild/fail/field_does_not_impl_arbitrary.rs:6:17
  |
6 | #[derive(Clone, Arbitrary)]
  |                 ^^^^^^^^^ the trait `Arbitrary` is not implemented for `DoesNotImplArbitrary`
  |
  = help: the following other types implement trait `Arbitrary`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: this error originates in the derive macro `Arbitrary` (in Nightly builds, run with -Z macro-backtrace for more info)
